bin/tests/errors/lexer/lex_err_invalid_number_suffix.swg
#global fileprivate

123abc // swc-expected-error {{lex_err_invalid_number_suffix}}
